--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -253,6 +253,7 @@
     box-shadow 0.5s ease,
     border 0.5s ease
   ;
+  will-change: transform;
 }
 #example.index .following.bar > .menu .item {
   transition: all 0.5s ease;
