--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="ui vertical inverted black footer segment">
+<div class="ui inverted black footer vertical segment">
   <div class="container">
     <div class="ui stackable inverted divided relaxed grid">
       <div class="eight wide column">
