--- a/server/files/stylesheets/docs.rtl.css
+++ b/server/files/stylesheets/docs.rtl.css
@@ -1,4 +1,4 @@
-/*******************************
+﻿/*******************************
         Highlighted Colors
 *******************************/
 
@@ -36,7 +36,6 @@ pre {
   white-space: -o-pre-wrap;
   word-wrap: break-word;
 }
-/*rtl:ignore*/
 pre {
   background-color: #FFFFFF;
   text-align: left;
@@ -50,9 +49,6 @@ ul.list {
 ul.list li {
   list-style-position: outside;
 }
-
-
-/*rtl:ignore*/
 pre.console {
   background-color: transparent;
   line-height: 1.6;
@@ -68,7 +64,7 @@ code {
   font-family: "Monaco","Menlo","Ubuntu Mono","Consolas","source-code-pro",monospace;
   font-size: 12px;
   font-weight: bold;
-  margin: 0 2px 0px 0px;
+  margin: 0 0px 0px 2px;
   padding: 2px 4px;
   vertical-align: baseline;
 }
@@ -140,7 +136,7 @@ a:hover {
 }
 #example #toc .logo.image {
   width: 35px;
-  margin-right: 1em;
+  margin-left: 1em;
 }
 #example #toc .item {
   position: relative;
@@ -151,7 +147,7 @@ a:hover {
 #example #toc .item .circular.label {
   position: absolute;
   top: 0.75rem;
-  right: 1em;
+  left: 1em;
   opacity: 0.2;
   transition: background 0.3s ease;
 }
@@ -222,7 +218,7 @@ a:hover {
   width: 350px;
 }
 #example .header.segment .download.popup .check.icon {
-  margin-left: -1em;
+  margin-right: -1em;
 }
 #example .header.segment .download.popup .framework.grid,
 #example .header.segment .download.popup .standalone.grid,
@@ -233,7 +229,7 @@ a:hover {
 
 #example.legacy .main.menu,
 #example.legacy .launch.button {
-  left: auto !important;
+  right: auto !important;
 }
 #example.scale.down.pushed .header.segment {
   padding-top: 30px;
@@ -272,8 +268,8 @@ a:hover {
 ---------------*/
 
 #example .advertisement {
-  float: right;
-  margin-left: 2em;
+  float: left;
+  margin-right: 2em;
 }
 #example .index.advertisement {
   display: block;
@@ -283,10 +279,10 @@ a:hover {
   float: none;
   display: table-cell;
   vertical-align: top;
-  padding-left: 2em;
+  padding-right: 2em;
 }
 #example #carbonads-container {
-  float: right;
+  float: left;
 }
 #example .advertisement .carbonad {
   -moz-border-radius: 5px;
@@ -300,7 +296,7 @@ a:hover {
   line-height: 1.3;
 }
 #example .carbonad-tag {
-  text-align: left;
+  text-align: right;
 }
 #example .inverted.advertisement .carbonad {
   background-color: rgba(0, 0, 0, 0.25);
@@ -327,7 +323,7 @@ a:hover {
 #example .main.container a.anchor {
   height: 1px;
   position: absolute;
-  right: 100%;
+  left: 100%;
   top: -2.5em;
   width: 1px;
 }
@@ -339,7 +335,7 @@ a:hover {
 
 #example .fixed.column {
   position: absolute;
-  right: 2em;
+  left: 2em;
   top: 0px;
   width: 300px;
 }
@@ -379,7 +375,7 @@ body#example {
   width: 100%;
 }
 #example .introduction .theme.buttons {
-  margin: -0.1em 0em 0em 0.5em;
+  margin: -0.1em 0.5em 0em 0em;
   vertical-align: middle;
 }
 /*--------------
@@ -401,16 +397,16 @@ body#example {
   opacity: 0.95;
 }
 
-#example.pushable.left.overlay .fixed.launch.button {
+#example.pushable.right.overlay .fixed.launch.button {
   transform: translate3d(0, 0, 0);
 }
 #example.pushable.overlay.left.pushed .fixed.launch.button {
-  transform: translate3d(260px, 0, 0);
+  transform: translate3d(-260px, 0, 0);
 }
 #example .fixed.launch.button {
   position: fixed;
   top: 63px;
-  left: -1px;
+  right: -1px;
 
   width: 55px;
   height: auto;
@@ -442,7 +438,7 @@ body#example {
   position: absolute;
   white-space: nowrap;
   top: auto;
-  left: 54px;
+  right: 54px;
   opacity: 0;
   -webkit-transition:
     0.3s opacity 0.3s
@@ -469,11 +465,11 @@ body#example {
 
 
 #example .shortcuts {
-  float: right;
+  float: left;
   clear: both;
 }
 #example .launch.button .icon {
-  margin-left: 0px;
+  margin-right: 0px;
 }
 
 /*----------------
@@ -508,7 +504,7 @@ body#example {
   display: none !important;
 }
 #example.basic .container {
-  right: 0px !important;
+  left: 0px !important;
 }
 #example.basic .main.container .introduction {
   font-size: 16px;
@@ -525,7 +521,7 @@ body#example {
    Overview Mode
 -----------------*/
 
-#example .right.floated.overview.button {
+#example .left.floated.overview.button {
   margin-bottom: 0.5em;
 }
 
@@ -548,7 +544,7 @@ body#example {
 #example.overview .example p {
   font-size: 1rem;
   font-weight: normal;
-  padding: 0em 0em 0em 0.5em;
+  padding: 0em 0.5em 0em 0em;
   width: auto;
   line-height: 1.4;
 }
@@ -610,7 +606,7 @@ body#example {
 }
 #example .existing.segment .title + em,
 #example .instructive.segment .title + em {
-  float: right;
+  float: left;
 }
 #example .label + .code {
   margin-top: 1.5em;
@@ -734,8 +730,8 @@ body#example {
 #example .clearing.example {
   overflow: hidden;
   clear: both;
-  padding-left: 1px;
   padding-right: 1px;
+  padding-left: 1px;
   padding-bottom: 1px;
 }
 #example .main.container:after {
@@ -812,7 +808,7 @@ body#example {
   position: absolute;
 
   top: 3rem;
-  right: 0px;
+  left: 0px;
   margin: 0;
   opacity: 0.1;
 
@@ -837,7 +833,7 @@ body#example {
   opacity: 1;
 }
 #example .example .grid i.code {
-  right: 25%;
+  left: 25%;
 }
 
 #example .pointing.label + .existing.segment {
@@ -886,7 +882,7 @@ body#example {
 #example .highlighted.example .grid:before {
   position: absolute;
   top: 1rem;
-  left: 1rem;
+  right: 1rem;
   background-color: #F0F0F0;
   content: '';
   width: calc(100% - 2rem);
@@ -1082,39 +1078,39 @@ body.progress.animated .ui.progress .bar {
 }
 #example .position.example .segment .icon:nth-of-type(1) {
   top: 0em;
-  left: 0em;
+  right: 0em;
 }
 #example .position.example .segment .icon:nth-of-type(2) {
   top: 0em;
-  left: 50%;
-  margin-left: -1em;
+  right: 50%;
+  margin-right: -1em;
 }
 #example .position.example .segment .icon:nth-of-type(3) {
   top: 0em;
-  right: 0em;
+  left: 0em;
 }
 #example .position.example .segment .icon:nth-of-type(4) {
   top: 50%;
   margin-top: -1em;
-  right: 0em;
+  left: 0em;
 }
 #example .position.example .segment .icon:nth-of-type(5) {
   bottom: 0em;
-  right: 0em;
+  left: 0em;
 }
 #example .position.example .segment .icon:nth-of-type(6) {
   bottom: 0em;
-  left: 50%;
-  margin-left: -1em;
+  right: 50%;
+  margin-right: -1em;
 }
 #example .position.example .segment .icon:nth-of-type(7) {
   bottom: 0em;
-  left: 0em;
+  right: 0em;
 }
 #example .position.example .segment .icon:nth-of-type(8) {
   top: 50%;
   margin-top: -1em;
-  left: 0em;
+  right: 0em;
 }
 
 #example .main.ui.grid {
@@ -1126,7 +1122,7 @@ body.progress.animated .ui.progress .bar {
 ---------------*/
 
 #example .icon.example .grid {
-  text-align: left;
+  text-align: right;
 }
 #example .icon.example .grid .code {
   position: static;
@@ -1471,8 +1467,8 @@ body.progress.animated .ui.progress .bar {
   background-color: #FFFFFF;
   margin: 0em auto;
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.05);
-  border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
+  border-left: 1px solid #DDDDDD;
   border-bottom: 1px solid #DDDDDD;
   padding: 2em 2em 7em;
   z-index: 1;
@@ -1480,12 +1476,12 @@ body.progress.animated .ui.progress .bar {
 #example .wide.main.container {
   width: 80%;
   margin: 0 auto;
-  right: 0;
+  left: 0;
   max-width: 1140px;
 }
 
-#example .main.container > .right.rail .sticky,
-#example .main.container > .tab > .right.rail .sticky {
+#example .main.container > .left.rail .sticky,
+#example .main.container > .tab > .left.rail .sticky {
   padding: 2em 0em;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
@@ -1572,7 +1568,7 @@ body.progress.animated .ui.progress .bar {
     display: block;
   }
   #example .container {
-    right: 110px;
+    left: 110px;
   }
 }
 
@@ -1581,8 +1577,8 @@ body.progress.animated .ui.progress .bar {
     display: block;
   }
   #example .advertisement {
-    left: 100%;
-    padding-left: 0em;
+    right: 100%;
+    padding-right: 0em;
     position: absolute;
     top: -1em;
     vertical-align: top;
@@ -1591,25 +1587,25 @@ body.progress.animated .ui.progress .bar {
 @media only screen and (min-width : 998px) and (max-width: 1200px) {
   #example .header.segment .container {
     width: 878px;
-    right: -24px;
+    left: -24px;
   }
   #example .tab.header.segment .tabular.menu {
     width: 680px;
   }
   #example .container {
     width: 680px;
-    right: 75px;
+    left: 75px;
     margin: 0em auto;
   }
   #example .container .right.rail {
     width: 200px;
-    padding-left: 0em;
+    padding-right: 0em;
   }
 }
 @media only screen and (min-width : 1200px) and (max-width: 1355px) {
   #example .container {
     width: 765px;
-    right: 128px;
+    left: 128px;
     margin: 0em auto;
   }
 }
@@ -1680,13 +1676,13 @@ body.progress.animated .ui.progress .bar {
   #example .carbonad-tag {
     float: none;
     display: block;
-    text-align: left;
-    margin-left: 160px;
+    text-align: right;
+    margin-right: 160px;
     width: 170px;
   }
   #example:not(.index) .introduction .button {
     float: none;
-    margin: 0 0.5em 0.5em 0;
+    margin: 0 0 0.5em 0.5em;
   }
 }
 
@@ -1774,7 +1770,7 @@ body.progress.animated .ui.progress .bar {
 }
 @media only screen and (max-width : 998px) {
   #example .examples {
-    margin-right: 230px;
+    margin-left: 230px;
     padding: 1px;
   }
   #example .fixed.column,
@@ -1784,7 +1780,7 @@ body.progress.animated .ui.progress .bar {
 }
 @media only screen and (min-width : 998px) {
   #example .examples {
-    margin-right: 280px;
+    margin-left: 280px;
     padding: 1px;
   }
   #example .fixed.column,
