--- a/server/files/stylesheets/rtl.css
+++ b/server/files/stylesheets/rtl.css
@@ -44,6 +44,6 @@ html[lang="ar"] {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-html[lang="ar"] body, .ui, .ui *:not(.icon) {
+html[lang="ar"] body,html[lang="ar"] .ui,html[lang="ar"] .ui *:not(.icon) {
   font-family: "Droid Arabic Kufi","Droid Sans", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif!important;
 }
