Remove contact message

--- a/server/partials/language-modal.html
+++ b/server/partials/language-modal.html
@@ -11,7 +11,7 @@
         <div class="bar"></div>
       </div>
       <p>We need your help to make Semantic available to  people who speak your language.</p>
-      <p>Our translation tools are easy to use and allow you to translate text without having to leave the site. If you are interested in joining our translation team please <a href="mailto:jack@semantic-ui.com?subject=Localization%20Help">e-mail me</a> for access to our translation hub.
+      <p>Our translation tools are easy to use and allow you to translate text without having to leave the site.
       </p>
     </div>
   </div>
