--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -261,38 +261,68 @@ a:hover {
 #example #carbonads-container {
   float: right;
 }
-#example .advertisement .carbonad {
+#example .advertisement #carbonads {
+  display: block;
+  width: 300px;
+  height: 118px;
+  background-color: #F7F7F7;
+  padding: 8px;
+  font-size: 12px;
+  font-family: Helvetica Neue, Arial, sans-serif;
+  overflow: hidden;
+  float: right;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #CCCCCC;
 }
-#example .advertisement .carbonad-text {
+#example .advertisement .carbon-img {
+  float: left;
+  margin-right: 10px;
+  width: 130px;
+}
+#example .advertisement .carbon-text {
+  width: 140px;
+  float: left;
   height: auto;
-  font-size: 12px;
+  color: #000000;
   line-height: 1.3;
 }
-#example .carbonad-tag {
-  text-align: left;
+#example .advertisement .carbon-text:hover {
+  color: #666666;
 }
-#example .inverted.advertisement .carbonad {
+#example .carbon-poweredby {
+  text-align: left;
+  color: #BBB;
+  float: left;
+  font-size: 11px;
+  margin-top: 9px;
+  text-align: left;
+  width: 140px;
+}
+
+/* Inverted Ad */
+#example .inverted.advertisement #carbonads {
   background-color: rgba(0, 0, 0, 0.25);
   border: none;
   overflow: hidden;
   height: auto;
   padding: 6px 0px 13px;
 }
-#example .inverted.advertisement .carbonad-text {
+#example .inverted.advertisement .carbon-text {
   color: rgba(255, 255, 255, 0.6);
 }
-#example .inverted.advertisement .carbonad-tag {
+#example .inverted.advertisement .carbon-text:hover {
+  color: rgba(255, 255, 255, 1);
+}
+#example .inverted.advertisement .carbon-poweredby {
   margin-top: 10px;
   color: rgba(255, 255, 255, 0.4);
 }
-#example .inverted.advertisement .carbonad-tag a {
+#example .inverted.advertisement .carbon-poweredby a {
   color: rgba(255, 255, 255, 0.8);
 }
-#example .inverted.advertisement .carbonad-tag a:hover {
+#example .inverted.advertisement .carbon-poweredby a:hover {
   color: #FFFFFF;
 }
 
@@ -1674,11 +1704,11 @@ body.progress.animated .ui.progress .bar {
   #example #carbonads-container {
     float: none;
   }
-  #example .carbonad {
+  #example #carbonads {
     width: auto;
   }
-  #example .carbonad-text,
-  #example .carbonad-tag {
+  #example .carbon-text,
+  #example .carbon-poweredby {
     float: none;
     display: block;
     text-align: left;
@@ -1719,10 +1749,10 @@ body.progress.animated .ui.progress .bar {
   #example .main.menu .github.item:before {
     display: none;
   }
-  #example .carbonad {
+  #example #carbonads {
     height: 135px;
   }
-  #example .carbonad .carbonad-text {
+  #example #carbonads .carbon-text {
     width: 90px;
   }
 }
