--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -644,7 +644,8 @@ body#example {
   opacity: 0.5;
 }
 #example .example :not(.images) > .wireframe.image {
-  margin: 1rem 0em;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 #example .example :not(.images) > .wireframe.image:first-child {
   margin-top: 0em;
@@ -1084,6 +1085,14 @@ body.progress.animated .ui.progress .bar {
   -moz-animation: finish 10s ease-in-out infinite;
   -ms-animation: finish 10s ease-in-out infinite;
   animation: finish 10s ease-in-out infinite;
+}
+
+/*--------------
+      Header
+---------------*/
+
+#example.header .wireframe.image {
+  max-width: 500px;
 }
 
 /*--------------
