--- a/server/partials/examples/icon.html
+++ b/server/partials/examples/icon.html
@@ -1,7 +1,7 @@
 <div class="demo icons">
   <i class="search icon"></i>
   <i class="mail outline icon"></i>
-  <i class="external link icon"></i>
+  <i class="external icon"></i>
   <i class="wifi icon"></i>
   <i class="setting icon"></i>
   <i class="home icon"></i>
@@ -32,7 +32,7 @@
   <i class="protect icon"></i>
   <i class="calendar outline icon"></i>
   <i class="ticket icon"></i>
-  <i class="external link square icon"></i>
+  <i class="external square icon"></i>
   <i class="map icon"></i>
   <i class="bug icon"></i>
   <i class="mail square icon"></i>
