--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -33,10 +33,9 @@
   margin-bottom: 0px;
   border-bottom: none;
 
-  background-color: #00B5AD;
+  background-color: #009189;
+  background-image: radial-gradient(farthest-corner, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
   background-position: 50% 50%;
-  background-image: -webkit-radial-gradient(farthest-corner, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.95));
-  background-image: radial-gradient(farthest-corner, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.95));
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 
@@ -46,7 +45,9 @@
   transition: background-color 3s ease-in-out 1s;
 }
 #example.index .masthead.zoomed {
-  background-color: #555555;
+  background-color: #2A2A2A;
+  animation: none;
+  -webkit-animation: none;
 }
 #example .masthead .grid {
   margin: 0em;
@@ -61,6 +62,159 @@
   -moz-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
+
+/* Animation */
+/*#example.index .masthead:before {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0px;
+  content: '';
+  background: url(/images/before.jpg);
+
+  -moz-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+
+  -webkit-animation-name: masthead;
+  -moz-animation-name: masthead;
+  -o-animation-name: masthead;
+  animation-name: masthead;
+
+  -ms-transition: opacity 2.5s ease-in-out, transform 5s ease-in-out;
+  -webkit-transition: opacity 2.5s ease-in-out, transform 5s ease-in-out;
+  -moz-transition: opacity 2.5s ease-in-out, transform 5s ease-in-out;
+  transition: opacity 2.5s ease-in-out, transform 5s ease-in-out;
+
+  opacity: 0;
+
+  -webkit-animation-duration: 15s;
+  -moz-animation-duration: 15s;
+  -ms-animation-duration: 15s;
+  -o-animation-duration: 15s;
+  animation-duration: 15s;
+
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  animation-timing-function: linear;
+  -webkit-animation-timing-function: linear;
+
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+#example.index .masthead:after {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0px;
+  content: '';
+  background: url(/images/ui.png);
+
+  -moz-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+
+  -webkit-animation-name: masthead;
+  -moz-animation-name: masthead;
+  -o-animation-name: masthead;
+  animation-name: masthead;
+
+  -ms-transition: opacity 3s ease-in-out, transform 5s ease-in-out;
+  -webkit-transition: opacity 3s ease-in-out, transform 5s ease-in-out;
+  -moz-transition: opacity 3s ease-in-out, transform 5s ease-in-out;
+  transition: opacity 3s ease-in-out, transform 5s ease-in-out;
+
+  opacity: 0.06;
+
+  -webkit-animation-duration: 15s;
+  -moz-animation-duration: 15s;
+  -ms-animation-duration: 15s;
+  -o-animation-duration: 15s;
+  animation-duration: 15s;
+
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  animation-timing-function: linear;
+  -webkit-animation-timing-function: linear;
+
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+
+}
+#example .masthead.zoomed:before {
+  opacity: 0.05;
+  -webkit-transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateZ(0px);
+  -moz-transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateZ(0px);
+  transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateZ(0px);
+}
+#example.index .masthead.zoomed:after {
+  opacity: 0;
+  -webkit-transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateY(-6%) translateZ(0px);
+  -moz-transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateY(-6%) translateZ(0px);
+  transform: rotateX(0deg) rotateZ(0deg) rotateY(0deg) translateY(-6%) translateZ(0px);
+}
+@keyframes masthead {
+ 0% {
+    background-position: 0% 0%;
+ }
+ 100% {
+    background-position: 0% -475px;
+ }
+}
+@-moz-keyframes masthead {
+ 0% {
+   background-position: 0% 0%;
+ }
+ 100% {
+   background-position: 0% -475px;
+ }
+}
+@-webkit-keyframes masthead {
+ 0% {
+   background-position: 0% 0%;
+ }
+ 100% {
+   background-position: 0% -475px;
+ }
+}
+@-ms-keyframes masthead {
+ 0% {
+   background-position: 0% 0%;
+ }
+ 100% {
+  background-position: 0% -475px;
+ }
+}
+@-o-keyframes masthead {
+ 0% {
+   background-position: 0% 0%;
+ }
+ 100% {
+   background-position: 0% -475px;
+ }
+}
+
+*/
 
 
 #example.index .fixed.following.bar {
@@ -109,7 +263,7 @@
 
 #example.index .masthead.segment h1 {
   font-size: 3em;
-  color: rgba(255, 255, 255, 0.5);
+  color: #FFFFFF;
   line-height: 1.2;
   margin: 0px 0px 0px;
   padding-bottom: 0px;
@@ -129,12 +283,12 @@
 }
 #example.index .masthead.segment h1 b {
   display: inline-block;
-  font-weight: 300;
+  font-weight: 500;
   color: #FFFFFF;
 }
 #example.index .masthead.segment h1 .text {
   display: inline-block;
-  font-weight: 300;
+  font-weight: 500;
   margin-left: -0.4em;
 }
 #example.index .masthead h2 {
@@ -413,7 +567,7 @@
 #example .stripe .column > p {
   font-size: 16px;
   line-height: 1.6;
-  margin: 2em 0em;
+  margin: 1em 0em;
 }
 
 #example .dark.stripe {
@@ -448,8 +602,7 @@
 ---------------*/
 
 #example.index .email.stripe {
-  border-top: 1px solid #DDDDDD;
-  padding: 2em 0em;
+  padding: 5em 0em;
 }
 #example.index .email.stripe p {
   margin: -0.5em 0em 1em;
