Update some language on homepage

--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -340,6 +340,14 @@
 }
 
 /*--------------
+    Intro
+---------------*/
+
+#example .intro.segment h1 + p {
+  font-size: 22px;
+}
+
+/*--------------
     Demo
 ---------------*/
 
