--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -289,6 +289,7 @@
 #example.index .masthead.segment h1 .text {
   display: inline-block;
   font-weight: 300;
+  color: rgba(255, 255, 255, 0.5);
   margin-left: -0.4em;
 }
 #example.index .masthead h2 {
@@ -476,8 +477,15 @@
 #example.index .stripe .grid .row {
   margin: 2rem 0rem;
 }
+#example.index .feature.stripe .grid .row {
+  margin: 0rem;
+}
 #example.index .feature.stripe p {
-  min-height: 100px;
+  -webkit-flex: 1 0 auto;
+  -moz-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  margin: 0.5em 0em 2em;
 }
 #example .stripe .ui.vertical.divider {
   font-size: 1rem;
@@ -549,7 +557,7 @@
   font-size: 20px;
 }
 #example .feature.stripe {
-  padding: 5em 0em;
+  padding: 3em 0em;
 }
 #example .theming.stripe .left.aligned.column {
   padding-top: 8em;
@@ -633,6 +641,9 @@
   }
   #example.index .masthead.segment h1 > .library {
     font-size: 1.5em;
+  }
+  #example.index .feature.stripe {
+    padding: 1em;
   }
 }
 
